# HIP-CPU

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: clang_linux.md  faq.md  gcc_linux.md  gcc_macos.md  linux.md  msvc.md  overview.md  performance.md
examples/: CMakeLists.txt
examples/bit_extract/: CMakeLists.txt  bit_extract.cpp
examples/hip_bus_bandwidth/: CMakeLists.txt  ResultDatabase.cpp  ResultDatabase.h  hip_bus_bandwidth.cpp
examples/hip_dispatch_enqueue_rate_mt/: CMakeLists.txt  hipDispatchEnqueueRateMT.cpp
examples/hip_dispatch_latency/: CMakeLists.txt  hipDispatchLatency.cpp
examples/hip_event/: CMakeLists.txt  hipEvent.cpp
examples/hip_info/: CMakeLists.txt  hipInfo.cpp
examples/matrix_transpose/: CMakeLists.txt  MatrixTranspose.cpp
examples/occupancy/: CMakeLists.txt  occupancy.cpp
examples/pragma_unroll/: CMakeLists.txt  pragma_unroll.cpp
examples/shared_memory/: CMakeLists.txt  sharedMemory.cpp
examples/square/: CMakeLists.txt  square.cpp
examples/streams/: CMakeLists.txt  streams.cpp
examples/vadd_hip/: CMakeLists.txt  vadd_hip.cpp
include/hip/: hip_api.h  hip_atomic.h  hip_complex.h  hip_constants.h  hip_defines.h  hip_device_launch_parameters.h  hip_enums.h  hip_fp16.h  hip_ldg.h  hip_math.h  hip_runtime.h  hip_runtime_api.h  hip_types.h  hip_vector_types.h
src/: CMakeLists.txt
src/hip/: CMakeLists.txt  catch_main.cpp  hip_api.test.cpp  hip_atomic.test.cpp  hip_constants.test.cpp  hip_defines.test.cpp  hip_device_launch_parameters.test.cpp  hip_enums.test.cpp  hip_fp16.test.cpp  hip_math.test.cpp  hip_runtime.test.cpp  hip_runtime_api.test.cpp  hip_types.test.cpp  hip_vector_types.test.cpp
src/include/hip/detail/: api.hpp  atomic_clang_gcc.hpp  atomic_msvc.hpp  complex.hpp  context.hpp  coordinates.hpp  device.hpp  event.hpp  fiber.hpp  flat_combiner.hpp  function.hpp  grid_launch.hpp  half.hpp  helpers.hpp  intrinsics.hpp  math.hpp  module.hpp  runtime.hpp  stream.hpp  system.hpp  system_posix.inl  system_windows.inl  task.hpp  tile.hpp  types.hpp  vector.hpp
tests/: CMakeLists.txt  benchmarks.cpp  catch_benchmarking_main.cpp  catch_main.cpp  hip_atomics.cpp  hip_device_all_any.cpp  hip_device_ballot.cpp  hip_device_barrier_not_in_first_block.cpp  hip_device_clock.cpp  hip_device_clz.cpp  hip_device_constant.cpp  hip_device_dynamic_shared.cpp  hip_device_dynamic_shared_2.cpp  hip_device_ffs.cpp  hip_device_fma.cpp  hip_device_get_limit.cpp  hip_device_half_half2.cpp  hip_device_malloc.cpp  hip_device_math_double.cpp  hip_device_math_float.cpp  hip_device_math_half.cpp  hip_device_memset.cpp  hip_device_popc.cpp  hip_device_printf.cpp  hip_device_shfl.cpp  hip_device_std_complex.cpp  hip_device_symbol.cpp  hip_device_synchronize.cpp  hip_get_device.cpp  hip_host_async_memcpy_all.cpp  hip_host_hipevent_elapsed_time.cpp  hip_host_hipevent_event_record.cpp  hip_host_hipstream_stress.cpp  hip_host_malloc_free_all.cpp  hip_host_math_float_double.cpp  hip_host_memcpy_all.cpp  hip_host_memset_all.cpp  hip_host_module.cpp  hip_host_multithread_hipstream.cpp  hip_host_multithread_hipstream_memcpy.cpp  (+4 more)
